@@ -1,3 +1,8 @@
+2008-12-04  Neal H. Walfield  <neal@gnu.org>
+
+	* Makefile.am (AM_CPPFLAGS): Set to $(USER_CPPFLAGS).
+	(AM_CFLAGS): Set to $(USER_CFLAGS).
+
 2008-11-03  Neal H. Walfield  <neal@gnu.org>
 
 	* headers.m4: Don't create an empty libhurd-slab/libhurd-slab.a.
